link from the nav to your pages

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="collapse navbar-collapse justify-content-center">
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link fw-bold" href="#">HOME</a></li>
-        <li class="nav-item"><a class="nav-link fw-bold" href="#">marcas</a></li>
-        <li class="nav-item"><a class="nav-link fw-bold" href="#">ubicacion</a></li>
+        <li class="nav-item"><a class="nav-link fw-bold" href="pages/marcas.html">marcas</a></li>
+        <li class="nav-item"><a class="nav-link fw-bold" href="pages/ubicacion.html">ubicacion</a></li>
       </ul>
     </div>
   </nav>
