--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UBICACION</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contacto - Ubicación</title>
+  <link rel="stylesheet" href="../css/ubicacion.css">
 </head>
 <body>
-    
+
+<div class="ccontainer">
+    <div class="contact-form">
+    <h2>Contáctanos</h2>
+    <form action="#" method="post">
+      <label for="nombre">Nombre <span class="required">*</span></label>
+      <input type="text" id="nombre" name="nombre" 
+             required 
+             oninvalid="this.setCustomValidity('Este campo es obligatorio')" 
+             oninput="this.setCustomValidity('')">
+
+      <label for="email">Correo electrónico <span class="required">*</span></label>
+      <input type="email" id="email" name="email" 
+             required 
+             oninvalid="this.setCustomValidity('Por favor ingresa tu correo')" 
+             oninput="this.setCustomValidity('')">
+
+      <label for="mensaje">Mensaje <span class="required">*</span></label>
+      <textarea id="mensaje" name="mensaje" rows="5" 
+                required 
+                oninvalid="this.setCustomValidity('Por favor escribe tu mensaje')" 
+                oninput="this.setCustomValidity('')"></textarea>
+
+      <button type="submit">Enviar</button>
+    </form>
+  </div>
+
+  <div class="maps">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3567.4354142435937!2d-64.19161482473746!3d-31.413502578599235!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x943298226b0a568b%3A0x78275b0a1b11e6b2!2sC%C3%B3rdoba%2C+Argentina!5e0!3m2!1ses!2sus!4v1727063119371!5m2!1ses!2sus" 
+      width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" 
+      referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
+
+</div>
+
 </body>
 </html>
