mejoro seccion home

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 </head>
 <body>
 
+<div class="bubble-carousel">
+  <div class="bubble-text active">¡Bienvenido a Modita!</div>
+  <div class="bubble-text">Encuentra las últimas tendencias</div>
+  <div class="bubble-text">Ofertas exclusivas para ti</div>
+  <div class="bubble-text">Moda urbana y casual</div>
+</div>
+
   <nav class="navbar navbar-expand-lg bg-white px-4">
     <a class="navbar-brand logo" href="#"></span>modita<span></a>
     <div class="collapse navbar-collapse justify-content-center">
@@ -77,8 +84,7 @@
   </div>
 
 
-
-  <!-- Bootstrap JS -->
+  <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
